# havn

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  create_release.sh  install.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-body.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactor.md
.github/workflows/: release.yml
containerised/: DOCKERHUB_README.md  DOCKERHUB_README.md.md  Dockerfile  dev.Dockerfile
src/: main.rs  parse_arg.rs
src/parse_arg/: mod.rs
src/port_descriptions/: mod.rs  tcp.txt
src/scanner/: host_info.rs  mod.rs
src/terminal/: color.rs  mod.rs  spinner.rs
